--- a/styles/style.css
+++ b/styles/style.css
@@ -247,3 +247,82 @@ header{
     background-size: cover;
     cursor: pointer;
 }
+
+.chat-friend-info{
+    display: block;
+    position: fixed;
+    bottom: 1%;
+    margin-left: 30%;
+    background: repeating-radial-gradient(#d5f5ee, #d3e3ff, #adddfd);
+    box-sizing: border-box;    
+    border: 1px solid #aec0d4;
+    top: 10%;
+    width: 70%;
+    height: 18%;
+    margin-left: 0%;
+    background: #a3f064d0;
+}
+
+.background-message{
+    background: #fffff347;
+    border-radius: 20px;
+    margin-top:1%;
+    margin-bottom:1%;
+    height: 100%;
+    width: 100%;
+    float: right;
+    bottom: 0%;
+    display: inline-block;
+}
+
+.mini-photo{
+    position: absolute;
+    border-radius: 20px;
+    margin-bottom:8%;
+    margin-left: 31%;
+    height: 20%;
+    width: 15%;
+    float: left;
+    bottom: 2%;
+    display: inline-block;
+    cursor:pointer;
+}
+
+.modal-window{
+    position: absolute;
+    background: #e7e7e7; 
+    border-radius: 20px; 
+    margin-bottom:8%; 
+    margin-left: 75%;
+    height: 20%; 
+    width: 20%; 
+    float: right; 
+    bottom: 2%;
+}
+
+.line{
+    top: 0;
+    width: 100%;
+    height: 25%;
+    background: #dadada;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.button-close{
+    float: right;
+    margin-top: 2%;
+    margin-right: 2%;
+    height: 80%;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.emoji-field{
+    height: 75%;
+    width:100%;
+    background: #dafffc;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    overflow: auto;
+}
