--- a/styles/style.css
+++ b/styles/style.css
@@ -326,3 +326,24 @@ header{
     border-bottom-right-radius: 20px;
     overflow: auto;
 }
+
+.hide-input-profile-photo{
+    opacity: 0;
+    position: fixed;
+    float: left;
+    height: 15%;
+    margin-left: -30%;
+    width: 20%;
+    top:12%;
+    cursor: pointer;
+}
+
+.hide-input-load-file{
+    opacity: 0;
+    position: fixed;
+    margin-left: 52%;
+    bottom: 1%;
+    height: 15%;
+    width: 5%;
+    cursor: pointer;
+}
